<resources>
    <string name="app_name">MSOAuth2</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="user_name">User Name</string>

    <string name="display_name">Display Name</string>
    <string name="already_member">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="dob">DOB</string>
    <string name="settings">Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile_name">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="internet_connected">Connected to Internet</string>
    <string name="internet_connection_error">Unable to connect. Check your network connection.</string>
    <string name="server_not_found_error">Please configure valid URL in app.properties file.</string>

    <string name="login_authentication">Please wait… we are logging you in</string>
    <string name="sign_up_authentication">Please wait… we are signing you in</string>
    <string name="loading">Loading… Please wait</string>
    <string name="password_reset_message">Please wait, request in progress</string>
    <string name="update_profile_message">Please wait, updating your changes</string>
    <string name="server_error">Failed to connect to server.</string>

    <string name="username_validation_error">Username should be 3–16 characters long with any lowercase letter (a-z),
        number (0-9), an underscore, or a hyphen</string>
    <string name="display_name_validation_error">Enter a valid display name.</string>

    <string name="password_validation_error">Minimum 6 alphanumeric characters required.</string>
    <string name="password_match_error">Password do not match.</string>
    <string name="password_duplicate_error">New password should not be same as old password.</string>

    <string name="email_validation_error">Enter a valid email address.</string>
    <string name="dob_validation_error">Enter valid DOB.</string>
    <string name="date_picker_title">Select Date</string>
    <string name="logout">Sign out</string>
    <string name="save">Save</string>
    <string name="logout_alert_message">Do you want to logout?</string>
    <string name="session_expired_message">Session expired. Please login again</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>
    <string name="change_password_activity_title">Change Password</string>
    <string name="edit_profile_activity_title">Edit Profile</string>
    <string name="login_actions_activity_title">Login Actions</string>
    <string name="login_activity_title">Login</string>
    <string name="reset_password_activity_title">Reset Password</string>
    <string name="signup_activity_title">Sign up</string>
    <string name="user_profile_activity_title">User Profile</string>
    <string name="title_list_preference">Change App Language</string>
    <string name="language_list_preference_key">list_preference</string>
    <string name="default_language">English</string>
    <string name="welcome_message">Welcome!</string>
    <string name="permission_denied_message">Permission denied to read your External storage</string>


</resources>
